--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
+  go_router: ^14.2.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.0
+  test: ^1.24.9
+  flutter_driver:
+    sdk: flutter
+  integration_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
