--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,29 +24,35 @@ jobs:
       - name: Run tests
         run: flutter test --coverage
 
-  ios:
+  integration-tests:
+    runs-on: macOS-latest
     strategy:
       matrix:
-        device:
-          - "iPhone 15 Pro Simulator (17.4)"
-      fail-fast: true
-    runs-on: macos-14.4.1
+        api-level:
+          - 29
+      fail-fast: false
     steps:
-      - name: "List all simulators"
-        run: "xcrun xctrace list devices"
-      - name: "Start Simulator"
-
-        run: |
-          UDID=$(xcrun xctrace list devices | grep "^${{ matrix.device }}" | awk '{gsub(/[()]/,""); print $NF}')
-          echo $UDID
-          xcrun simctl boot "${UDID:?No Simulator with this name found}"
-      - uses: actions/checkout@v3
-      - name: Setup Flutter SDK
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup Java
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '11'
+      - name: Setup Flutter (stable)
         uses: subosito/flutter-action@v2
         with:
-          channel: stable
-      - name: Install Flutter dependencies
-        run: flutter pub get
-      - name: Run integration tests
-        run: flutter test integration_test --verbose
-
+          channel: 'stable'
+      - name: Install Android SDK
+        uses: malinskiy/action-android/install-sdk@release/0.1.2
+      - run: echo $ANDROID_HOME
+      - run: sdkmanager --install "ndk;23.1.7779620"
+      - run: sdkmanager --install "build-tools;30.0.3"
+      - run: flutter pub get
+      - uses: malinskiy/action-android/emulator-run-cmd@release/0.1.2
+        with:
+          cmd: flutter test integration_test
+          api: 31
+          cmdOptions: -no-snapshot-save -noaudio -no-boot-anim -cores 2 -memory 3072 -no-window
+          tag: google_apis
+          abi: x86_64
