--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,13 +30,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.19.6'
+          channel: 'stable'
+          cache: true
+          cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:' # optional, change this to force refresh cache
+          cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:' # optional, change this to specify the cache path
+      
       - uses: futureware-tech/simulator-action@v3
         with:
           model: 'iPhone 14'
-
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
 
       - run: flutter pub get
       - run: flutter test integration_test
