--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -141,43 +141,15 @@ jobs:
             ~/.android/adb*
           key: avd-${{ matrix.api-level }}
 
-      - name: Create AVD and generate snapshot for caching
-        if: steps.avd-cache.outputs.cache-hit != 'true'
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: ${{ matrix.api-level }}
-          target: android-tv
-          profile: tv_1080p
-          arch: x86
-          force-avd-creation: false
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: false
-          avd-name: macos-ci-avd
-          script: echo "Generated AVD snapshot for caching."
-
       - name: Run Flutter tests
         run: flutter test
 
       - name: Run integration tests
+        # more info on https://github.com/ReactiveCircus/android-emulator-runner
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: ${{ matrix.api-level }}
-          target: android-tv
-          arch: x86
-          profile: tv_1080p
-          force-avd-creation: false
-          avd-name: macos-ci-avd
-          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: true
-          script: |
-            adb shell pm list packages | grep 'com.android.app.example' && adb uninstall com.android.app.example || echo "Application not found"
-            flutter build apk --debug --target-platform=android-x86
-            flutter install --debug
-            export MAESTRO_DRIVER_STARTUP_TIMEOUT=60000
-            ~/.maestro/bin/maestro test ./integration_test/run-test.yml
-      - name : Upload results
-        if : ${{ always() }}
-        uses : actions/upload-artifact@v3
-        with :
-          name : integration_testing_results-flutter-${{ matrix.api-level }}
-          path : ~/.maestro/tests/**
+          arch: x86_64
+          profile: Nexus 6
+          script: flutter test integration_test --verbose
+          
