--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,22 +102,22 @@ jobs:
           profile: Nexus 6
           script: flutter test integration_test
 
-  flutter_job:
-    runs-on: macos-latest
+  integration-tests:
+    name: Running tests on macOS-latest
+    runs-on: macOS-latest
     strategy:
       matrix:
-        api-level: [31]
+        api-level: [29]
+      fail-fast: false
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Java 11
-        uses: actions/setup-java@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup Java
+        uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
-          java-version: 11
-      
-      - name: Setup Flutter 3.19.6
+          java-version: '11'
+      - name: Setup Flutter (stable)
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.19.6'
@@ -125,31 +125,16 @@ jobs:
           cache: true
           cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:' # optional, change this to force refresh cache
           cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:' 
-      
-      - name: Gradle cache
-        uses: gradle/gradle-build-action@v2
-      
-      - name: Install Maestro
-        run: curl -Ls "https://raw.githubusercontent.com/GuillermoDLCO/maestro/main/scripts/install.sh" | bash
-
-      - name: AVD cache
-        uses: actions/cache@v3
-        id: avd-cache
+      - name: Install Android SDK
+        uses: malinskiy/action-android/install-sdk@release/0.1.2
+      - run: echo $ANDROID_HOME
+      - run: sdkmanager --install "ndk;23.1.7779620"
+      - run: sdkmanager --install "build-tools;30.0.3"
+      - run: flutter pub get
+      - uses: malinskiy/action-android/emulator-run-cmd@release/0.1.2
         with:
-          path: |
-            ~/.android/avd/*
-            ~/.android/adb*
-          key: avd-${{ matrix.api-level }}
-
-      - name: Run Flutter tests
-        run: flutter test
-
-      - name: Run integration tests
-        # more info on https://github.com/ReactiveCircus/android-emulator-runner
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: ${{ matrix.api-level }}
-          arch: x86_64
-          profile: Nexus 6
-          script: flutter test integration_test --verbose
-          
+          cmd: flutter test integration_test
+          api: 31
+          cmdOptions: -no-snapshot-save -noaudio -no-boot-anim -cores 2 -memory 3072 -no-window
+          tag: google_apis
+          abi: x86_64
