--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,53 +24,27 @@ jobs:
       - name: Run tests
         run: flutter test --coverage
 
-  ios:
-    runs-on: macOS-latest
+  # ios:
+  #   runs-on: macOS-latest
 
-    steps:
-      - uses: actions/checkout@v4
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.19.6'
-          channel: 'stable'
-          cache: true
-          cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:' # optional, change this to force refresh cache
-          cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:' # optional, change this to specify the cache path
+  #     - uses: subosito/flutter-action@v2
+  #       with:
+  #         flutter-version: '3.19.6'
+  #         channel: 'stable'
+  #         cache: true
+  #         cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:' # optional, change this to force refresh cache
+  #         cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:' # optional, change this to specify the cache path
       
-      - uses: futureware-tech/simulator-action@v3
-        with:
-          model: 'iPhone 14'
+  #     - uses: futureware-tech/simulator-action@v3
+  #       with:
+  #         model: 'iPhone 14'
 
-      - run: flutter pub get
-      - run: flutter test integration_test
+  #     - run: flutter pub get
+  #     - run: flutter test integration_test
 
-  android:
-    runs-on: macos-latest
-    strategy:
-      matrix:
-        api-level:
-          - 29
-          # you can add more API level if you want to run your tests on different API
-      fail-fast: true
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup Flutter SDK
-        uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-          # instead of "channel: stable", you could be more precise by specifying the exact version of Flutter you're using:
-          # flutter-version: '<FLUTTER_VERSION>'
-      - name: Install Flutter dependencies
-        run: flutter pub get
-      - name: Run integration tests
-        # more info on https://github.com/ReactiveCircus/android-emulator-runner
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: ${{ matrix.api-level }}
-          arch: x86_64
-          profile: Nexus 6
-          script: flutter test integration_test --verbose
 
   android_test:
     runs-on: ubuntu-latest
@@ -97,4 +71,5 @@ jobs:
           api-level: ${{ matrix.api-level }}
           arch: x86_64
           profile: Nexus 6
-          script: flutter test integration_test --verbose
+      - run: flutter pub get
+      - run: flutter test integration_test
