--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
   #     - run: flutter test integration_test
 
   android:
-    runs-on: macos-11
+    runs-on: macOS-latest
     strategy:
       matrix:
         api-level:
@@ -70,4 +70,4 @@ jobs:
           api-level: ${{ matrix.api-level }}
           arch: x86_64
           profile: Nexus 6
-          script: flutter test integration_test --verbose
+          script: flutter test integration_test
