--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,25 +4,25 @@ on: [push, workflow_dispatch]
 
 jobs:
 
-  # build:
-  #   runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - uses: subosito/flutter-action@v2
-  #       with:
-  #         flutter-version: '3.19.6'
-  #         channel: 'stable'
-  #         cache: true
-  #         cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:' # optional, change this to force refresh cache
-  #         cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:' # optional, change this to specify the cache path
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.19.6'
+          channel: 'stable'
+          cache: true
+          cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:' # optional, change this to force refresh cache
+          cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:' # optional, change this to specify the cache path
 
-  #     - name: Install dependencies
-  #       run: flutter pub get
+      - name: Install dependencies
+        run: flutter pub get
 
-  #     - name: Run tests
-  #       run: flutter test --coverage
+      - name: Run tests
+        run: flutter test --coverage
 
   # ios:
   #   runs-on: macOS-latest
@@ -46,12 +46,11 @@ jobs:
   #     - run: flutter test integration_test
 
   android:
-    runs-on: macOS-latest
+    runs-on: macos-11
     strategy:
       matrix:
         api-level:
           - 29
-          # you can add more API level if you want to run your tests on different API
       fail-fast: true
     steps:
       - uses: actions/checkout@v3
@@ -70,4 +69,4 @@ jobs:
           api-level: ${{ matrix.api-level }}
           arch: x86_64
           profile: Nexus 6
-          script: flutter test integration_test
+          script: flutter test integration_test --verbose
