--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,72 +1,30 @@
-name: main
-
-on: [push, workflow_dispatch]
-
+on:
+  push:
+    tags-ignore:
+      - '**'
+    branches:
+      - '**'
+name: Flutter integration test
 jobs:
-
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.19.6'
-          channel: 'stable'
-          cache: true
-          cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:' # optional, change this to force refresh cache
-          cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:' # optional, change this to specify the cache path
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Run tests
-        run: flutter test --coverage
-
-  # ios:
-  #   runs-on: macOS-latest
-
-  #   steps:
-  #     - uses: actions/checkout@v4
-
-  #     - uses: subosito/flutter-action@v2
-  #       with:
-  #         flutter-version: '3.19.6'
-  #         channel: 'stable'
-  #         cache: true
-  #         cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:' # optional, change this to force refresh cache
-  #         cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:' # optional, change this to specify the cache path
-      
-  #     - uses: futureware-tech/simulator-action@v3
-  #       with:
-  #         model: 'iPhone 14'
-
-  #     - run: flutter pub get
-  #     - run: flutter test integration_test
-
-  android:
-    runs-on: macos-11
+  drive_android:
+    runs-on: macos-latest
     strategy:
       matrix:
-        api-level:
-          - 29
-      fail-fast: true
+        api-level: [29]
+        target: [playstore]
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup Flutter SDK
-        uses: subosito/flutter-action@v2
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
         with:
-          channel: stable
-          # instead of "channel: stable", you could be more precise by specifying the exact version of Flutter you're using:
-          # flutter-version: '<FLUTTER_VERSION>'
-      - name: Install Flutter dependencies
-        run: flutter pub get
-      - name: Run integration tests
-        # more info on https://github.com/ReactiveCircus/android-emulator-runner
+          flutter-version: '2.8.1'
+          channel: 'stable'
+
+      # Run integration test
+      - name: Run Flutter Driver tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
+          target: ${{ matrix.target }}
           api-level: ${{ matrix.api-level }}
           arch: x86_64
           profile: Nexus 6
-          script: flutter test integration_test --verbose
+          script: flutter drive --driver=test_driver/integration_test.dart --target=integration_test/increment_success_test.dart
