--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,23 @@ jobs:
 
       - name: Run tests
         run: flutter test --coverage
+        
+  test:
+    runs-on: macOS-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.19.6'
+          channel: 'stable'
+          cache: true
+          cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:' # optional, change this to force refresh cache
+          cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:' # optional, change this to specify the cache path
+
+      - uses: futureware-tech/simulator-action@v3
+        with:
+          model: 'iPhone 14'
+
+      - run: flutter pub get
+      - run: flutter test integration_test
