--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,4 +63,4 @@ jobs:
         run: flutter pub get
 
       - name: ios integration_test
-      - run: flutter test integration_test --coverage
+        run: flutter test integration_test --coverage
